kubernetes/apps/monitoring/gotify/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotify
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - gotify.blackcats.cc
  rules:
    - backendRefs:
        - name: gotify
          port: 80
